--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
   - pip install coveralls
 
 script:
-  - coverage run ./manage.py test -v 1
+  - coverage run ./manage.py test
 
 after_success:
   - coveralls
