--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ certifi==2017.11.5
 chardet==3.0.4
 coverage==4.4.2
 coveralls==1.2.0
-Django==2.0.1
+django>=2.0.10
 docopt==0.6.2
 idna==2.6
 pluggy==0.6.0
